feat: 批量打开链接功能

--- a/src/renderer/i18n/lang/en-US.json
+++ b/src/renderer/i18n/lang/en-US.json
@@ -17,6 +17,8 @@
   "cancel": "Cancel",
   "confirm": "Confirm",
   "batchDelete": "Batch Delete",
+  "batchOpen": "Batch Open",
+  "batchOpenWarning": "No more than 20 links can be opened at one time",
   "setting": "Setting",
   "scanTime": "Scan time",
   "effective": "Effective",
